k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-k8s-ingress
  namespace: example-k8s
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  ingressClassName: traefik
  rules:
    - host: example-k8s.stacktemple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sect-client
                port:
                  number: 3002
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sect-server
                port:
                  number: 3001
  tls:
    - hosts:
        - example-k8s.stacktemple.com
